test/good/nullables/cmp05.px

f: (Int->Void)?
print f == null, null == f
print f != null, null != f
