test/bad/lambdas/call01.px

Int->Int f = _
f()
